# cfe-rs

./: .gitignore  Cargo.toml
.cargo/: config.toml
apps/: Cargo.toml
apps/cfe/: Cargo.toml
apps/cfe/src/: lib.rs  msg.rs  udp.rs
apps/cfe/src/sbn/: mod.rs  udp.rs  udp_server.rs  unix.rs
apps/example/: Cargo.toml
apps/example/src/: example.rs  example_payload.rs  main.rs
apps/ground/: Cargo.toml
apps/ground/src/: main.rs
apps/relay/: Cargo.toml
apps/relay/src/: relay.rs  relay_flight.rs  relay_payload.rs
apps/sch/: Cargo.toml
apps/sch/src/: main.rs  sch.rs  sch_flight.rs  sch_payload.rs
apps/src/: ci.rs  example.rs  lib.rs  perf.rs  sch.rs  tcp.rs  to.rs  wifi.rs
apps/src/libs/: mod.rs  msg_queue.rs  notifier.rs
builds/esp32/: Cargo.toml  sdkconfig.defaults
builds/esp32/src/: main.rs
builds/fl/: Cargo.toml
builds/fl/src/: main.rs
libs/cfe/: Cargo.toml
libs/cfe/src/: lib.rs  msg.rs  perf.rs
libs/cfe/src/sbn/: mem.rs  mod.rs  udp.rs  udp_server.rs  unix.rs
src/: main.rs  wifi_driver.rs
