[package]
name = "cfe-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.18", features = ["serde"] }
simple-log = "1.6.0"
tokio = { version = "1.28.2", features = [
    "tokio-macros",
    "parking_lot",
    "rt-multi-thread",
    "macros",
    "time",
] }
apps = { path = "./apps" }
