[package]
name = "cfe-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.18", features = ["serde"] }
simple-log = "1.6.0"
apps = { path = "./apps" }
rerun = { version = "0.6.0", features = ["web_viewer"] }
lazy_static = "1.4.0"
ringbuf = "0.3.3"
serde = "1.0.164"
serde_json = "1.0.96"
