[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "payload"
path = "src/example_payload.rs"

[lib]
name = "example"
path = "src/example.rs"

[dependencies]
cfe = { path = "../../libs/cfe"}