[package]
name = "ground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
lazy_static = "1.4.0"
log = { version = "0.4.18", features = ["serde"] }
parking_lot = { version = "0.12.1", features = ["serde"] }
ringbuf = "0.3.3"
serde = { version = "1.0.163", features = ["derive"] }
cfe = { path = "../cfe"}
simple-log = "1.6.0"
rerun = "0.11.0"
serde_json = "1.0.96"
