[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "flight"
path = "src/relay_flight.rs"

[[bin]]
name = "payload"
path = "src/relay_payload.rs"


[dependencies]
cfe = { path = "../cfe"}