[package]
name = "sch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "flight"
path = "src/sch_flight.rs"

[[bin]]
name = "payload"
path = "src/sch_payload.rs"

[lib]
name = "sch"
path = "src/sch.rs"

[dependencies]
cfe = { path = "../../libs/cfe"}
