[package]
name = "fl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfe = { path = "../../libs/cfe"}
relay = { path = "../../apps/relay"}
sch = { path = "../../apps/sch"}
example = { path = "../../apps/example"}
simple-log = "1.6.0"
