[package]
name = "cfe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.31"
colored = "2.0.4"
log = { version = "0.4.20", features = ["serde"] }
queues = "1.1.0"
serde = { version = "1.0.163", features = ["derive"] }
